--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <a href="#">Personal Website</a>
         <a href="#">Personal Siteplan</a>
     </nav>
+
+    <p>Santiago Risso - WDD130</p>
     
 </body>
 </html>
