personal website content

--- a/lamottestudio/site-plan.html
+++ b/lamottestudio/site-plan.html
@@ -90,8 +90,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Services</a>
+        <a href="#">Portfolio</a>
       </nav>
       <hr>
       <h2>
@@ -102,10 +102,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Services <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Portfolio  <!-- change this -->
         </div>
 
         <div class="top">
@@ -127,29 +127,38 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Introduce the "Company", my history and experience. General idea of what we do. 
+
+        It will provide an easy way of reaching out to me, via whatsapp button.
+
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="static/development_workstation.jpeg" alt="sofware development image">
+        <img src="static/networking.jpeg" alt="networking image">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Services</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Much more detail explanations of services we provide, including solutions and scope of different consulting activities we offer.
+
+        It will contain a carrousel of photos showing services.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="static/development.jpg" alt="sofware development image">
+        <img src="static/security.jpeg" alt="security image">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Portfolio</h3>
       <p>
-        [Written copy for the Page 3 here]
+        This will be a space to show and expose previous work done, and success cases as well, either be solutions to common problems from the past.
+        Specific examples and technologies used to solve specific requirements.
+        
+        It will incluse photo gallery of previously created web sites, and potentially testimonials from other customers.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="static/rack.jpeg" alt="rack image">
+        <img src="static/servers.jpeg" alt="servers image">
 
       </ul>
       <hr>
