personal site plan

--- a/lamottestudio/site-plan.html
+++ b/lamottestudio/site-plan.html
@@ -21,13 +21,13 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>To bring IT services to small and medium businesses at an affordable price. Wether it is Security, Task Automatization, Infrastructure or Software Solutions.
-        Providing Solutions is exactly where we make a difference with our out of the box thinking and 10+ Years of expertise.
+      <p>To bring IT services to small and medium businesses at an affordable price. Wether it is Security, Task Automatization, Infrastructure implementations or Software Solutions.
+        Providing Solutions is exactly where we make the difference. 10+ Years of expertise. Troubleshooting. Problem and Incdient management.
       </p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>Individual enterpreneur, small businesses, medium businesses.</p>  <!-- change this -->
+      <p>Home owners. Entrepreneurs. Small offices, medium and large businesses.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -92,6 +92,7 @@
         <a href="#">Home</a>
         <a href="#">Services</a>
         <a href="#">Portfolio</a>
+        <a href="#">About us</a>
       </nav>
       <hr>
       <h2>
@@ -172,19 +173,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="static/home-wireframe.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Services</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="static/services-wireframe.png" alt="services wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Portfolio</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="static/portfolio-wireframe.png" alt="portfolio wireframe">
     </main>
   </body>
 
