fixed carousel, css

--- a/lamottestudio/services.html
+++ b/lamottestudio/services.html
@@ -34,7 +34,7 @@
                 </ul>
             </nav>
             <div class="div-whatsapp">
-                <a class="nav-link btn-whatsapp" href="https://wa.me/00598292198888" target="_blank">Whatsapp now</a>
+                <a class="nav-link btn-whatsapp" href="https://wa.me/00598292198888" target="_blank">WhatsApp Us</a>
             </div>
         </div>
     
