--- a/lamottestudio/index.html
+++ b/lamottestudio/index.html
@@ -132,13 +132,13 @@
                   <p class="card-text">Infrastructure services for small, medium, and large business: Networking, Virtualization & more.</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card card2">
                 <img src="./static/development.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">Web development services to cover spcific business needs, whether Public hosted Web sites, or internal Web apps.</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card card3">
                 <img src="./static/security.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">Cibersecurity, building security and Surveillance.</p>
