--- a/lamottestudio/services.html
+++ b/lamottestudio/services.html
@@ -56,19 +56,19 @@
         <div class="services-section">
           <div class="card-section">
             <div class="card" style="width: 18rem;">
-                <img src="./static/rack.jpeg" class="card-img-top" alt="...">
+                <img src="./static/rack.jpeg" class="card-img-top-services" alt="...">
                 <div class="card-body">
                   <p class="card-text">Infrastructure services for small, medium, and large business: Networking, Virtualization & more.</p>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="./static/development.jpg" class="card-img-top" alt="...">
+                <img src="./static/development.jpg" class="card-img-top-services" alt="...">
                 <div class="card-body">
                   <p class="card-text">Web development services to cover spcific business needs, whether Public hosted Web sites, or internal Web apps.</p>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="./static/security.jpeg" class="card-img-top" alt="...">
+                <img src="./static/security.jpeg" class="card-img-top-services" alt="...">
                 <div class="card-body">
                   <p class="card-text">Cibersecurity, building security and Surveillance.</p>
                 </div>
