--- a/lamottestudio/portfolio.html
+++ b/lamottestudio/portfolio.html
@@ -48,19 +48,19 @@
         <div class="card-section-portfolio">
           <div class="row">
             <div class="card" style="width: 18rem;">
-              <img src="./static/rack.jpeg" class="card-img-top" alt="...">
+              <img src="./static/rack.jpeg" class="card-img-top-portfolio" alt="...">
               <div class="card-body">
                 <p class="card-text">Infrastructure services for small, medium, and large business: Networking, Virtualization & more.</p>
               </div>
           </div>
           <div class="card" style="width: 18rem;">
-              <img src="./static/development.jpg" class="card-img-top" alt="...">
+              <img src="./static/development.jpg" class="card-img-top-portfolio" alt="...">
               <div class="card-body">
                 <p class="card-text">Web development services to cover spcific business needs, whether Public hosted Web sites, or internal Web apps.</p>
               </div>
           </div>
           <div class="card" style="width: 18rem;">
-              <img src="./static/security.jpeg" class="card-img-top" alt="...">
+              <img src="./static/security.jpeg" class="card-img-top-portfolio" alt="...">
               <div class="card-body">
                 <p class="card-text">Cibersecurity, building security and Surveillance.</p>
               </div>
@@ -68,19 +68,19 @@
           </div>
           <div class="row">
             <div class="card" style="width: 18rem;">
-              <img src="./static/rack.jpeg" class="card-img-top" alt="...">
+              <img src="./static/rack.jpeg" class="card-img-top-portfolio" alt="...">
               <div class="card-body">
                 <p class="card-text">Infrastructure services for small, medium, and large business: Networking, Virtualization & more.</p>
               </div>
           </div>
           <div class="card" style="width: 18rem;">
-              <img src="./static/development.jpg" class="card-img-top" alt="...">
+              <img src="./static/development.jpg" class="card-img-top-portfolio" alt="...">
               <div class="card-body">
                 <p class="card-text">Web development services to cover spcific business needs, whether Public hosted Web sites, or internal Web apps.</p>
               </div>
           </div>
           <div class="card" style="width: 18rem;">
-              <img src="./static/security.jpeg" class="card-img-top" alt="...">
+              <img src="./static/security.jpeg" class="card-img-top-portfolio" alt="...">
               <div class="card-body">
                 <p class="card-text">Cibersecurity, building security and Surveillance.</p>
               </div>
@@ -88,19 +88,19 @@
           </div>
           <div class="row">
             <div class="card" style="width: 18rem;">
-              <img src="./static/rack.jpeg" class="card-img-top" alt="...">
+              <img src="./static/rack.jpeg" class="card-img-top-portfolio" alt="...">
               <div class="card-body">
                 <p class="card-text">Infrastructure services for small, medium, and large business: Networking, Virtualization & more.</p>
               </div>
           </div>
           <div class="card" style="width: 18rem;">
-              <img src="./static/development.jpg" class="card-img-top" alt="...">
+              <img src="./static/development.jpg" class="card-img-top-portfolio" alt="...">
               <div class="card-body">
                 <p class="card-text">Web development services to cover spcific business needs, whether Public hosted Web sites, or internal Web apps.</p>
               </div>
           </div>
           <div class="card" style="width: 18rem;">
-              <img src="./static/security.jpeg" class="card-img-top" alt="...">
+              <img src="./static/security.jpeg" class="card-img-top-portfolio" alt="...">
               <div class="card-body">
                 <p class="card-text">Cibersecurity, building security and Surveillance.</p>
               </div>
