Child page 2 completed

--- a/lamottestudio/site-plan.html
+++ b/lamottestudio/site-plan.html
@@ -53,7 +53,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th><th>Accent 3</th><th>Accent 4</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#020100]</td><td class="secondary">[#5D5D5D]</td><td class="accent1">[#5F520A]</td><td class="accent2">[#343330]</td><td class="accent3">[#9B8F4A]</td><td class="accent4">[#F8F8F8]</td></tr>
+        <tr><td class="primary">[#020100]</td><td class="secondary">[#343330]</td><td class="accent1">[#5F520A]</td><td class="accent2">[#5D5D5D]</td><td class="accent3">[#9B8F4A]</td><td class="accent4">[#F8F8F8]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
