home page parragraph correction

--- a/lamottestudio/index.html
+++ b/lamottestudio/index.html
@@ -82,7 +82,7 @@
   
         <p class="index-text">
             We are a company highly commited to improve things and solve problems by using technology at it's best.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, aliquid perspiciatis architecto atque ducimus enim sunt velit accusamus dolore sapiente quae eligendi hic odio tenetur. Quia quis nam dolore rerum blanditiis quos dignissimos, ipsam cupiditate quaerat fugit adipisci qui modi non magni nobis, saepe corporis illo? Ea ut aspernatur asperiores?
+            Expand your IT resources by outsourcing tasks, responsabilities and projects to focus on growing your business. We bring the skills to provide you software solutions, automation, Database consulting, Backup and Network design, troubleshooting, and recovery plans for your organization.
           </p>
         <div>
 
